# sienna-locomotive

./: .clang-format  .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  config_window.py  enums.py  fuzzer_config.py  fuzzkit.sln  gui.py  gui_stats.py  harness.py  make.ps1  postprocess.py  regress.py  requirements.txt  setup.py  state.py  test_argCompare_fail.txt  test_argCompare_win.txt  triage.py  utilz.py
ansible/: README.md
ansible/esxi/: config.yaml  create_vms.yaml  stop_vms.yaml
ansible/nested_esxi/: create_vms.yaml  stop_vms.yaml
ansible/virtualbox/: create_vms.yaml  start_vms.sh  stop_vms.sh  stop_vms.yaml
app/: index.html  main.js  package.json
auto_it_scripts/: easyRmToMp3Converter.au3
ci/: lint.sh  qe-be-gone.ps1  wer-be-gone.ps1
common/: CMakeLists.txt  function_lookup.cpp  mutation.cpp  sl2_dr_client.cpp  sl2_server_api.cpp  uuid.c
corpus/asm/: build.sh  generate_main.py
corpus/test_application/: CmakeLists.txt  internet_read_file.cpp  internet_read_file.h  socket_server.cpp  test_application.cpp  win_http_read_data.cpp  win_http_read_data.h  win_http_web_socket_receive.cpp  win_http_web_socket_receive.h  winsock_recv.cpp  winsock_recv.h
corpus/win_asm/: build.py  debug.bat  example_config.json
db/: __init__.py  checksec.py  conf.py  crash.py  target_config.py  tracer.py  utilz.py
deploy/: INSTALL.md  install.ps1
doc/html/: annotated.html  classes.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0b8350fdd318f0b6a04d54cec4999906.html  files.html  (+77 more)
docs/: Ansible.md  AutoIT.md  Install.md
fuzz_dynamorio/: CMakeLists.txt  CmakeLists.txt  fuzzer.cpp  fuzzer_config.py  harness.py  mutation.cpp
fuzzci/: fuzz.py  pe.py  web.py  winafl.py
fuzzer/: CMakeSettings.json  fuzzer.cpp
fuzzkit/: ExportHandler.cpp  ExportHandler.h  ImportHandler.cpp  ImportHandler.h  README.md  fkt_template.bt  fuzzkit.cpp  fuzzkit.sln  fuzzkit.vcxproj  fuzzkit.vcxproj.filters  trc_template.bt
gui/: QtHelpers.py  checkbox_tree.py  sqlalchemy_model.py  stats.py
harness/: config.py  enums.py  instrument.py  named_mutex.py  state.py  statz.py  threads.py
include/: loguru.hpp  server.hpp  tracer_utils.h  triage.h
injectable/: injectable.cpp  injectable.vcxproj  injectable.vcxproj.filters
misc/: fkt_template.bt  trc_template.bt
react/: index.js  package.json  webpack.config.js
sample/: CMakeLists.txt
sample/.fuzzci/target_parse/: CMakeLists.txt  config.yml  entry.cc
sample/.fuzzci/target_parse/corpus/: C101DA  crash-7cacc093e883fe1de1a5b3bddd541a5f145cb244
server/: CMakeLists.txt  fuzz_server.vcxproj.filters  server.cpp  server.vcxproj
sl1-reports/: project_summary.html  sienna_locomotive_ph1_prototype.tgz
sl1/prototype/tracer/: .gitmodules  CMakeLists.txt  host.h  main.cc  process.cc  process.h  recorder.cc  recorder.h  registerfile.cc  registerfile.h  regs.inc  tracer.cc  tracer.h
sl1/prototype/tracer/reader/: gen.sh  proc.py  reader  tracer.py
sl1/prototype/tracer/schema/: CMakeLists.txt  Trace.proto
sl2/: gui.py  triage.py
test_application/: CmakeLists.txt  internet_read_file.cpp  stdafx.cpp  test_application.cpp  test_application.vcxproj  win_http_read_data.cpp  win_http_web_socket_receive.h
tracer/: CMakeLists.txt  compare_cov.py  test.py  tracer.cpp  tracer.vcxproj
tracer_dynamorio/: test.py  tracer.cpp  utils.c
triage/: CMakeLists.txt  Checksec.cc  Checksec.h  README.md  Xploitability.cc  Xploitability.h  XploitabilityBangExploitable.cc  XploitabilityBangExploitable.h  XploitabilityBreakpad.cc  XploitabilityBreakpad.h  XploitabilitySL2.cc  XploitabilitySL2.h  XploitabilityTracer.cc  XploitabilityTracer.h  challenge_binaries.md  concrete.py  exploitability_sl2.cc  exploitability_sl2.h  minidump.cc  stackwalk_common.h  statz.h  symbolic.py  triage.cc  triage.h  triage.py  triager.cc
triage/corpus/asm/: build.sh  crash.asm  generate_main.py  test.asm
triage/corpus/toy/: test.c
triage/corpus/win_asm/: build.bat  crashes.asm  generate_main.py
triage/pin/taint/: crash_data.cpp  crash_data.h  instruction.cpp  instruction.h  makefile.rules  memory_manager.cpp  memory_manager.h  taint.cpp  taint.sln  taint.vcxproj  taint_data.cpp  taint_data.h  verdict.md
triage/sample_configs/: config.yaml
triage/test/asm/: __main__.py  test.py
triage/test/asm/data/: break_point.json  call_indirect_nt.json  call_indirect_t.json  div_zero.json  jump_indirect_nt.json  jump_indirect_t.json  pop_t.json  read_nt.json  read_null_nt.json  read_null_t.json  read_t.json  stack_ptr_ret_t.json  undefined_insn.json  write_nt.json  write_null_nt.json  write_null_t.json  write_t.json  xchg_nt.json  xchg_t.json  xor_clear_nt.json  xor_t.json
triage/test/cb/: __main__.py  test.py
triage/test/cb/data/: Fortress.json  Space_Attackers.json  String_Storage_and_Retrieval.json  UTF-late.json  cotton_swab_arithmetic.json  electronictrading.json  middleout.json  pizza_ordering_system.json
triage/test/shared/: __init__.py
triage/test/win_asm/data/: break_point.json  div_zero.json  jump_indirect_t.json  pop_t.json  read_null_t.json  read_t.json  stack_exec.json  write_null_nt.json  write_t.json  xchg_t.json  xor_clear_nt.json  xor_t.json
triage_dynamorio/: CmakeLists.txt  test.py  tracer.cpp  utils.c  utils.h
triage_pin/: detect_crashes.md  symbolic.py
vmfuzz/: Behavior.md  Configuration.md  Database.md  Install.md  README.md  Usage.md  autoit.py  compute_offset.py  compute_offset_standlone.py  compute_offset_wingdb.py  config.yaml  configSumatraPDF.yaml  configSumatraPDFnoAutoit.yaml  configVLC.yaml  crash_detection.py  exploitable_standalone.py  radamsa.py  run_process.py  test_easymp3.py  test_exploitable.py  test_offset.py  test_sumatra.py  test_sumatra_noautoit.py  test_vlc.py  test_winafl.py  test_winafl_crashes.py  vmfuzz.py
web/: INSTALL.md  alternative_web.py  ansible_command.py  build_docs.sh  communicate.py  communication_endpoints.py  data_model.py  init.sql  program_endpoints.py  run_endpoints.py  samples.yaml  system_endpoints.py  web.py  web_utils.py  work.py
wizard/: CmakeLists.txt  wizard.cpp
(+1060 files in other folders)
